# form-instructions-poc

./: .env.example  .gitignore  PoC-Integrazione-navigazione-documentale.md  PoC-Istruzioni_Nota-Integrativa_v1.md  PoC-Istruzioni_Requisiti_v1.md  PoC-Nota_importante_strategia.md  PoC-Nota_raffinamento_strategia.md  README.md  pyproject.toml
config/: alias_table.yaml  prices.toml  settings.toml
config/eval/: rp_golden.yaml  rp_golden_external.yaml
config/prompts/: answer.md  conversion.md  convert_text.md  eval_judge.md  identity.md  nav_descent.md  nav_router.md  node_summary.md
docs/: decision_report_conversione.md  findings_e_decisione_escalation.md  lezioni_generalizzazione_pipeline.md  report_fase1_conversione.md  report_stato.md  uso_indice_documento.md
src/poc_istruzioni/: __init__.py  bootstrap.py  cli.py  config.py  provenance.py
src/poc_istruzioni/db/: __init__.py  connection.py  repositories.py  schema.sql
src/poc_istruzioni/eval/: __init__.py  dataset.py  judge.py  report.py  runner.py
tests/: test_checks.py  test_cli.py  test_config.py  test_convert.py  test_db.py  test_eval_dataset.py  test_eval_runner.py  test_explorer.py  test_identity.py  test_ingest_pipeline.py  test_keywords.py  test_layout.py  test_ledger.py  test_lint.py  test_llm_client.py  test_nav_provenance.py  test_nodes.py  test_pins.py  test_pricing.py  test_provenance.py  test_qa_log.py  test_render.py  test_retrieval.py  test_review.py  test_routing.py  test_spike.py  test_summaries.py  test_textlayer.py  test_textroute.py  test_transcribe.py  test_transcribe_batch.py
(+32 files in other folders)
